<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/LevelMargin"
    tools:context=".Level" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_1_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/level_header" />

    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/level_1_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/LevelMargin"
        android:layout_height="wrap_content" >
        
        <ImageView
            android:id="@+id/meerkat_image"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:paddingTop="2dp"
            android:src="@drawable/meerkat" />
        
        <TextView
            android:id="@+id/meerkats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/LevelMargin"
            android:textSize="55sp"
            android:text="20" />

        <ImageView
            android:id="@+id/clock_image"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="@dimen/LevelMargin"
            android:src="@drawable/clock" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="55sp"
            android:text="15" />

    </LinearLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/LevelMargin"
        android:gravity="center"
        android:maxWidth="300dp"
        android:minWidth="300dp"
        android:layout_gravity="center"
        android:text="@string/level_1_button" />

</LinearLayout>